# reconstructor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  UniversalCreation.py  pyproject.toml
C_difficile_media/: 699034.5.definedminimal.sbml  699034.5.sbml.html
MEMOTE/: 106648.24.html  1349827.3.html  1349827.3.sbml.html  1382925.3.html  1382925.3.sbml.html  1390.556.html  218496.4.html  218496.4.sbml.html  2848143.3.html  529507.6.html  57706.84.html  699034.5.html  837.83.html
RepresentativeGENRES/: 1382925.3.sbml
RepresentativeGENRES/CarveME/: Bacillus_amyloliquefaciens_DSM_7.xml  Campylobacter_jejuni_subsp_jejuni_NCTC_11168_ATCC_700819.xml  Proteus_mirabilis_HI4320.xml
RepresentativeGENRES/ModelSEED/: 106648.24MS.sbml  1382925.3MS.sbml  218496.4MS.sbml  2848143.3MS.sbml  529507.6MS.sbml  57706.84MS.sbml  699034.5MS.sbml  837.83MS.sbml
RepresentativeGENRES/Reconstructor/: 1349827.3.sbml  1382925.3.sbml  218496.4.sbml  837.134.sbml  837.83.sbml
docs/: installation.md  universaldb.md
reconstructor/: 488.146.sbml  CHANGELOG.md  CMakeLists.txt  JCP8151B.KEGGprot.sbml  LICENSE  README.md  fmt.metaG.01044A.bin.149.KEGGprot.extended.sbml  pyproject.toml  setup.py
reconstructor/reconstructor/: __init__.py  __main__.py
reconstructor/reconstructor/diamond/src/: libdiamond.cpp
reconstructor/reconstructor/diamond/src/run/: main.h
reconstructor/src/reconstructor/: LICENSE  __init__.py  __main__.py
reference/: README.md
reference/MEMOTE/: 837.83.sbml.html
reference/RepresentativeGENRES/CarveME/: Acinetobacter_baumannii_AB030.xml  Clostridioides_difficile_630.xml  Helicobacter_pylori_26695.xml  Porphyromonas_gingivalis_ATCC_33277.xml  Tropheryma_whipplei_str_Twist.xml
reference/RepresentativeGENRES/ModelSEED/: 1349827.3MS.sbml  1390.556MS.sbml
src/: curateuniversal.py  get_diamond.py
src/reconstructor/: LICENSE  __main__.py  _funcs.py  build.py  diamond.py  errors.py  reconstructor.py
src/reconstructor/resources/: __init__.py
tests/: conftest.py  test_funcs.py  test_main.py  test_misc.py  utils.py
tests/resources/: sample_blast.out  tiny_fasta.fa
