[tool.poetry]
name = "reconstructor"
version = "1.1.1"
description = "COBRApy Compatible Genome Scale Metabolic Network Reconstruction Tool: Reconstructor"
authors = ["Matt Jenior and Emma Glass"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cobra = "0.22.1"
argparse = "^1.4.0"
symengine = "^0.9.2"
python-libsbml = "^5.19.0"
wget = "^3.2"
unipath = "1.1"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
