[tool.poetry]
name = "reconstructor"
version = "1.1.2"
description = "COBRApy Compatible Genome Scale Metabolic Network Reconstruction Tool: Reconstructor"
authors = ["Matt Jenior and Emma Glass"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cobra = ">0.22.1,<0.24"
symengine = "^0.9.2"
wget = "^3.2"
unipath = "1.1"
numpy = "<1.24"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
