[project]
name = "reconstructor"
version = "1.2.0"
description = "COBRApy Compatible Genome Scale Metabolic Network Reconstruction Tool: Reconstructor"
authors = [
  { name="Matt Jenior" },
  { name="Emma Glass" },
]
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "numpy<=1.22",
    "cobra==0.22.1",
    "argparse>=1.4.0",
    "symengine>=0.9.2",
    "python-libsbml==5.19.0",
    "wget>=3.2",
    "unipath>=1.1",
]

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.15,<=3.26",
    "swig",
    "ninja",
]
build-backend = "setuptools.build_meta"